fix:  сorrect letter spacing on some lines

--- a/singolo2.css
+++ b/singolo2.css
@@ -27,7 +27,7 @@
   padding-bottom: 15px;
   font-size: 18px;
   font-weight: 350;
-  letter-spacing: -0.1995px;
+  letter-spacing: -0.2px;
 }
 
 .portfolio-images {
@@ -149,22 +149,27 @@
 }
 
 .about_us-personnel--employee:nth-child(2) .employee-name {
-  letter-spacing: -0.5px;
+  letter-spacing: -0.575px;
 }
 
 .employee-description {
-  margin-top: -9.5px;
+  position: relative;
+  margin-top: -11px;
   font-size: 12px;
   line-height: 21px;
   color: #767e9e;
   width: 301px;
   font-weight: 400;
   text-align: justify;
-  letter-spacing: -0.16px;
+  letter-spacing: -0.125px;
 }
 
 .about_us-personnel--employee:nth-child(2) .employee-description {
-  letter-spacing: 0.05px;
+  letter-spacing: 0px;
+}
+
+.about_us-personnel--employee:nth-child(3) .employee-description {
+  letter-spacing: -0.09px;
 }
 
 .employee-social {
